--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body class="mat-typography" style="background-color:#f1f1f1" >
   <app-root></app-root>
   <app-redirect></app-redirect>
 </body>
